# snake-game

./: .gitignore  CMakeLists.txt  compile_commands.json  makefile
include/: apple.h  constants.h  label.h  main.h  memory_utils.h  queue.h  snake.h  tilefuncs.h
src/: apple.c  constants.c  label.c  main.c  memory_utils.c  queue.c  snake.c  tilefuncs.c
